# scene_graph_app

./: README.md  app.py  pyproject.toml
src/: agcn_refine.py  detector.py  relation_proposal.py  viz.py
src/scene_graph_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
